View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0024218 | Open CASCADE | OCCT:Shape Healing | public | 2013-10-01 15:59 | 2016-08-06 13:12 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Product Version | 6.6.0 | ||||
Target Version | 6.8.0 | Fixed in Version | 6.8.0 | ||
Summary | 0024218: ShapeFix_Face requires double execution to produce valid shape when FixSplitFaceMode is in effect | ||||
Description | ShapeFix_Face produces invalid faces even when all required flags have been set. The same issue can be reproduced with fixshape command. | ||||
Steps To Reproduce | restore f.brep f checkshape f fixshape r f +o checkshape r fixshape rr r +o checkshape rr | ||||
Tags | No tags attached. | ||||
Test case number | bugs heal(017) bug24218 | ||||
|
f.brep (12,862 bytes) |
|
Add check of wire orientation before adding internal wire in splitting face Branch CR24218 is ready to be reviewed. Dear GKA, Please review. |
|
Branch CR24218 is ready to test |
|
Dear BugMaster, Branch CR24218 (and products from GIT master) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 8739ac7d721466bd77dff6b1991a458498f0d87a Number of compiler warnings: occt component : Linux: 18 (18 on master) Windows: 0 (0 on master) MacOS: 410 (410 on master) products component : Linux: 12 (12 on master) Windows: 2 (2 on master) Regressions/Differences: No regressions/differences Testing cases: http://occt-tests/CR24218-master-occt/Debian60-64/bugs/heal/bug24218.html http://occt-tests/CR24218-master-occt/Windows-32-VC9/bugs/heal/bug24218.html bugs heal(017) bug24218: OK Testing on Linux: Total MEMORY difference: 355573852 / 355845808 Total CPU difference: 52891.1400000001 / 55266.979999999734 Testing on Windows: Total MEMORY difference: 379314320 / 381861276 Total CPU difference: 35622.484375 / 43088.59375 There are no differences in images found by testdiff. |
occt: master 77193183 2014-04-24 12:31:26 Committer: bugmaster Details Diff |
0024218: ShapeFix_Face requires double execution to produce valid shape when FixSplitFaceMode is in effect Test case for issues CR24218 |
Affected Issues 0024218 |
|
mod - src/ShapeFix/ShapeFix_Face.cxx | Diff File | ||
add - tests/bugs/heal/bug24218 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-10-01 15:59 | kgv | New Issue | |
2013-10-01 15:59 | kgv | Assigned To | => gka |
2013-10-01 15:59 | kgv | File Added: f.brep | |
2013-10-01 16:50 | kgv | Relationship added | related to 0024181 |
2013-10-15 20:39 |
|
Target Version | 6.7.0 => 6.7.1 |
2014-04-04 18:34 |
|
Target Version | 6.7.1 => 6.8.0 |
2014-04-15 10:36 |
|
Assigned To | gka => ika |
2014-04-15 10:37 |
|
Status | new => assigned |
2014-04-17 11:14 | ika | Note Added: 0028919 | |
2014-04-17 11:14 | ika | Assigned To | ika => gka |
2014-04-17 11:14 | ika | Status | assigned => resolved |
2014-04-17 13:44 |
|
Note Added: 0028927 | |
2014-04-17 13:44 |
|
Status | resolved => reviewed |
2014-04-18 17:17 |
|
Assigned To | gka => mkv |
2014-04-23 16:41 |
|
Note Added: 0029039 | |
2014-04-23 16:42 |
|
Test case number | => bugs heal(017) bug24218 |
2014-04-23 16:42 |
|
Assigned To | mkv => bugmaster |
2014-04-23 16:42 |
|
Status | reviewed => tested |
2014-04-28 10:27 | bugmaster | Changeset attached | => occt master 77193183 |
2014-04-28 10:27 | bugmaster | Status | tested => verified |
2014-04-28 10:27 | bugmaster | Resolution | open => fixed |
2014-11-11 12:47 |
|
Fixed in Version | => 6.8.0 |
2014-11-11 12:52 |
|
Status | verified => closed |
2016-08-06 13:12 | kgv | Relationship added | related to 0025852 |