0024218: ShapeFix_Face requires double execution to produce valid shape when FixSplitFaceMode is in effect

Test case for issues CR24218